# Face3D

./: ReadMe.md  gradle.properties  local.properties
app/: build.gradle
app/src/androidTest/java/com/example/face3d/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face3d.cpp
app/src/main/cpp/dlib/cmake_utils/test_for_cudnn/: CMakeLists.txt
app/src/main/cpp/eos/: CMakeLists.txt  cmake
app/src/main/cpp/eos/include/eos/core/: LandmarkMapper.hpp
app/src/main/cpp/eos/include/eos/fitting/: closest_edge_fitting.hpp  fitting.hpp  linear_shape_fitting.hpp  orthographic_camera_estimation_linear.hpp
app/src/main/cpp/eos/include/eos/morphablemodel/: MorphableModel.hpp
app/src/main/cpp/include/: Face.h  FaceInfo.h  MeshInfo.h  ModelInfo.h  android_utils.h
app/src/main/cpp/load3dmodel/common/: assimpLoader.h  myGLCamera.h  myGLM.h  myJNIHelper.cpp  myJNIHelper.h
app/src/main/cpp/load3dmodel/modelAssimp/: modelAssimp.cpp
app/src/main/java/com/example/face3d/: Constants.java  Display3dModelActivity.java  Face3D.java  FaceDetectActivity.java  FileUtils.java  MenuActivity.java
app/src/main/java/com/example/face3d/camera/: AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java
app/src/main/java/com/example/face3d/gl/: GestureClass.java  MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_camera.xml  activity_face_detect.xml  activity_menu.xml  assimp_layout.xml  fragment_camera2_basic.xml
app/src/main/res/layout-v21/: fragment_camera2_basic.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/face3d/: ExampleUnitTest.java
